--- a/style.css
+++ b/style.css
@@ -1,103 +1,114 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
+* {
+  box-sizing: border-box;
 }
 
-.carousel {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  
+html {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+}
+
+.fa-chevron-left,
+.fa-chevron-right {
+  color: orange;
+  font-size: 40px;
 }
 
 .slides {
   position: relative;
   height: 100vh;
-  flex-grow: 1;
-  min-height: 250px;
-  padding: 0;
   margin: 0;
+  padding: 0;
   list-style-type: none;
+  background: #000000;
 }
 
 .slide {
   position: absolute;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  padding: 50px;
+  transition: opacity 1s;
   opacity: 0;
-  z-index: -999;
-  transition: opacity 0.3s;
+  background-position: 50% 50%;
+  background-size: cover;
 }
 
-.active {
+.slide.active {
+  z-index: 1;
   opacity: 1;
-  z-index: 0;
 }
 
-.slide {
-  font-size: 40px;
-  padding: 40px;
-  box-sizing: border-box;
-  background: #333;
-  color: #fff;
-}
-
-.slide:nth-of-type(1) {
-  background-color: red;
-}
-
-.slide:nth-of-type(2) {
-  background-color: orange;
-}
-
-.slide:nth-of-type(3) {
-  background-color: green;
-}
-
-.slide:nth-of-type(4) {
-  background-color: blue;
-}
-
-.slide:nth-of-type(5) {
-  background-color: purple;
-}
-
-.slides {
-  margin-bottom: 20px;
-  user-select: none;
-}
-
-.controls,
-.indicators {
-  display: flex; 
-  gap: 10px;
-  margin-bottom: 10px;
-  transform: translate(20px, -130px);
-}
-
-.control-pause,
-.control-prev,
 .control-next,
-.indicator {
+.control-prev,
+.control-pause {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.control-pause {
+  top: 50%;
+  left: 50%;
+  height: 0;
+  padding: 0;
+  opacity: 0;
+}
+
+.control-prev {
+  left: 0;
+  width: 10%;
+}
+
+.control-prev:hover {
+  text-shadow: 0 0 10px red;
+  cursor: pointer;
+}
+
+.control-next {
+  right: 0;
+  width: 10%;
+}
+
+.control-next:hover {
+  text-shadow: 0 0 10px red;
+  cursor: pointer;
+}
+
+.indicators {
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  background-color: lightsteelblue;
+  width: 100%;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.indicator {
+  width: 30px;
+  height: 1px;
+  margin: -40px 8px 0;
+  border: 3px solid orange;
+}
+
+.indicator:hover {
   cursor: pointer;
-  user-select: none;
 }
 
 .indicator.active {
-  background-color: tomato;
-}
-
-.control-pause span {
-  position: absolute;
+  border-color: white;
+  box-shadow: 0 0 10px white;
 }
